[package]
name = "peeringdb-rs"
version = "0.1.1"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/peeringdb-rs"
documentation = "https://docs.rs/peeringdb-rs"
description = """
A unofficial library helps accessing PeeringDB data.
"""
keywords = ["bgp", "bgpkit", "peeringdb"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
oneio = { version = "0.18.1", default-features = false, features = ["http", "rustls"] }